[tool.poetry]
name = "build-github-readme"
version = "0.1.0"
description = "A tool to build my GitHub README file."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"
packages = [{include = "build_readme"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
feedparser = "^6.0.10"
pyquery = "^2.0.0"
pytz = "^2023.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.2.2"
ruff = "^0.0.256"
types-pytz = "^2023.3.0.0"
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-readme = 'build_readme.cli:cli'

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyquery.*"
ignore_missing_imports = true
