[tool.poetry]
name = "build-github-readme"
version = "0.1.0"
description = "A tool to build my GitHub README file."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"
packages = [{include = "build_readme"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
feedparser = "^6.0.11"
pyquery = "^2.0.0"
pytz = "^2023.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^7.4.4"
ruff = "^0.0.256"
types-pytz = "^2023.4.0.20240130"
types-requests = "^2.31.0.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-readme = 'build_readme.cli:cli'

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyquery.*"
ignore_missing_imports = true
