[tool.poetry]
name = "build-github-readme"
version = "0.1.0"
description = "A tool to build my GitHub README file."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"
packages = [{include = "build_readme"}]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.1.7,<9.0.0"
feedparser = ">=6.0.11,<7.0.0"
pyquery = ">=2.0.0,<3.0.0"
pytz = "*"
requests = ">=2.31.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.8.0,<25.0.0"
isort = ">=5.13.2,<6.0.0"
mypy = ">=1.9.0,<2.0.0"
pytest = ">=7.4.4,<8.0.0"
ruff = ">=0.0.256,<0.0.257"
types-pytz = "*"
types-requests = ">=2.31.0.20240311,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-readme = 'build_readme.cli:cli'

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyquery.*"
ignore_missing_imports = true
